@startuml controle-academico
skinparam classAttributeIconSize 0
skinparam classFontSize 15
skinparam classBackgroundColor #FAFAFF
skinparam shadowing false
left to right direction

' ==== Pacotes Visuais ====
package "👥 Pessoas" {
    abstract class Pessoa <<Pessoa>> #EAF2F8 {
        - nome : String
        - idade : int
        - endereco : Endereco
    }

    class Aluno <<Aluno>> #D4E6F1 {
        - matricula : int
        - curso : Curso
    }

    class Professor <<Professor>> #D4E6F1 {
        - cpf : String
        - atuacao : String
    }

    Pessoa <|-- Aluno
    Pessoa <|-- Professor

    note right of Pessoa
        Superclasse abstrata que representa
        características comuns a pessoas.
    end note

    note right of Aluno
        Aluno é uma Pessoa com matrícula
        e curso vinculado.
    end note

    note right of Professor
        Professor herda Pessoa e possui
        CPF e área de atuação.
    end note
}

package "🌐 Infraestrutura" {
    class Endereco <<Endereço>> #FADBD8 {
        - logradouro : String
        - bairro : String
        - localidade : String
        - uf : String
        - cep : String
    }

    note right of Endereco
        Representa o endereço físico.
        Pode usar API ViaCEP futuramente.
    end note
}

package "🎓 Acadêmico" {
    class Curso <<Curso>> #FEF9E7 {
        - id : int
        - nome : String
    }

    class Disciplina <<Disciplina>> #FEF9E7 {
        - id : int
        - nome : String
        - cargaHoraria : int
        - categoria : String
    }

    class Turma <<Turma>> #F9E79F {
        - id : int
        - semestre : String
    }

    class Matricula <<Matrícula>> #FCF3CF {
        - notaFinal : double
        - frequencia : double
    }

    note right of Curso
        Curso ao qual o aluno pertence.
        Ex: Ciência da Computação.
    end note

    note right of Disciplina
        Conteúdo acadêmico. Pode ser
        vinculada a várias turmas.
    end note

    note right of Turma
        Representa uma oferta de disciplina
        em um semestre específico.
    end note

    note right of Matricula
        Representa o vínculo do aluno com
        uma turma. Armazena nota e frequência.
    end note

    Aluno --> Curso
    Aluno --> Matricula
    Professor --> Turma
    Turma --> Disciplina
    Turma --> Matricula
    Matricula --> Aluno
    Matricula --> Turma
}

Pessoa --> Endereco
@enduml
